--- a/html/Others.html
+++ b/html/Others.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Basic</title>
+    <title>Others</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         html,
