--- a/html/Examples.html
+++ b/html/Examples.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Others</title>
+    <title>Examples</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         html,
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <script src="../compiled/Others.js"></script>
+    <script src="../compiled/Examples.js"></script>
     <script>
         Elm.Main.fullscreen();
     </script>
